testsuite/tests/grammar/invalid_unparser/pick-in-or-2.lkt
import lexer_example

@abstract class FooNode implements Node[FooNode] {
}

class Root : FooNode {
    @nullable @parse_field f: FooNode
}

class Identifier: FooNode implements TokenNode {
}

class Number: FooNode implements TokenNode {
}

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Root(or(
        | pick("example" null(FooNode))
        | Identifier(@Identifier)
        | Number(@Number)
    ))
}
